--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "uam/amazon-pa-client",
-    "description": "PHP client library for the Amazon Product Advertising API",
+    "name": "uam/amazon-ecs-client",
+    "description": "PHP client library for the AWS ECommerce Service (Amazon Product Advertising API)",
     "type": "library",
-    "keywords": ["amazon", "product advertising", "ecs"],
+    "keywords": ["amazon", "product advertising API", "ecs"],
     "license": "MIT",
     "require": {
         "php": ">=5.3.2",
