--- a/test_services.json.dist
+++ b/test_services.json.dist
@@ -1,19 +1,12 @@
 {
-    "includes": ["_aws"],
     "services": {
-        "default_settings": {
+        "aws_ecs": {
+            "class": "UAM\\Aws\\Ecs\\EcsClient",
             "params": {
-                "key": "change_me",
-                "secret": "change_me",
-                "region": "us-east-1",
-                "ssl.certificate_authority": true
-            }
-        },
-        "cloudfront": {
-            "extends": "cloudfront",
-            "params": {
-                "private_key": "change_me",
-                "key_pair_id": "change_me"
+                "key": "Your AWS Access Key Id",
+                "secret": "Your AWS secret key",
+                "associateTag": "Your associate Tag",
+                "region": "region"
             }
         }
     }
