--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "keywords": ["amazon web services", "product advertising API", "ecs"],
     "license": "MIT",
     "require": {
-        "php": ">=5.3.2",
-        "aws/aws-sdk-php": "2.2.*"
+        "aws/aws-sdk-php": "~2.0"
     },
     "autoload": {
         "psr-0": {
