--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["amazon web services", "product advertising API", "ecs"],
     "license": "MIT",
     "require": {
-        "aws/aws-sdk-php": "~2.0"
+        "aws/aws-sdk-php": ">=2.0"
     },
     "autoload": {
         "psr-0": {
